Make changes for deployment

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ tumblr_username:   sangyye
 markdown: kramdown
 permalink: /:year/:month/:day/:title/
 
+exclude: [tasks]
+
 # Add plugins
 gems:
   - jekyll-sitemap
