add the caffeine

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: The Uberblock
 name: "Christian Vervoorts"
 email: mail@uberblock.de
 about_me: "System-Administrator at "
-description: "Uberblock is a little blog, about programming, servers and unix. I will review some things, write some HowTos and make a rant or two."
+description: "Uberblock is a little blog, about programming, servers and unix. I will review some things, write some HowTos and make a caffeine injected rant or two."
 baseurl: ""
 url: "http://uberblock.de"
 twitter_username:  sangyye
