Wording, wording, wording!

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: The Uberblock
 name: "Christian Vervoorts"
 email: mail@uberblock.de
-about_me: "System-Administrator with fable for BSD"
+about_me: "System-Administrator with a penchant for FreeBSD"
 description: "Uberblock is a little blog, about programming, servers and unix. I will review some things, write some HowTos and make a caffeine injected rant or two."
 baseurl: ""
 url: "http://uberblock.de"
