--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ env:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 before_install:
 - echo -e "Host peacock.uberspace.de\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-- openssl aes-256-cbc -K $encrypted_7aef735ff37c_key -iv $encrypted_7aef735ff37c_iv
-  -in deploy_key.enc -out deploy_key -d
+- openssl aes-256-cbc -K $encrypted_7aef735ff37c_key -iv $encrypted_7aef735ff37c_iv -in deploy_key.enc -out deploy_key -d
 - chmod 600 deploy-key
 - mv deploy-key ~/.ssh/id_rsa
