--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ env:
 before_install:
 - echo -e "Host peacock.uberspace.de\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 - openssl aes-256-cbc -K $encrypted_7aef735ff37c_key -iv $encrypted_7aef735ff37c_iv -in deploy_key.enc -out deploy_key -d
-- chmod 600 deploy-key
-- mv deploy-key ~/.ssh/id_rsa
+- chmod 600 deploy_key
+- mv deploy_key ~/.ssh/id_rsa
