--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ name: The Uberblock
 author:
   name: "Christian Vervoorts"
   email: mail@uberblock.de
+  twitter: sangyye
 about_me: "System-Administrator with a penchant for FreeBSD"
 description: "Uberblock is a little blog, about programming, servers and unix. I will review some things, write some HowTos and make a caffeine injected rant or two."
 baseurl: ""
