--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
+RewriteEngine On
+RewriteCond %{HTTPS} !=on
+RewriteCond %{ENV:HTTPS} !=on
+RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+
 ErrorDocument 404 /404/
 
 <IfModule mod_deflate.c>
