--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,7 @@
-language: ruby
+language: go
 sudo: false
-cache: bundler
-rvm:
-- 2.3.1
-install: bundle install
-script: bundle exec rake site:travis
-env:
-  global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+install: go get -v github.com/spf13/hugo
+script: hugo
 before_install:
 - echo -e "Host peacock.uberspace.de\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 - openssl aes-256-cbc -K $encrypted_7aef735ff37c_key -iv $encrypted_7aef735ff37c_iv -in deploy_key.enc -out deploy_key -d
