--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
-baseurl: http://uberblock.de
+baseurl: https://uberblock.de
 disablePathToLower: true
 languageCode: en-us
 title: The Uberblock
+pygmentsuseclasses: true
 permalinks:
   post: /:year/:month/:day/:title/
   page: /:filename/
