--- a/static/.htaccess
+++ b/static/.htaccess
@@ -5,6 +5,8 @@ RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 
 ErrorDocument 404 /404.html
 
+Redirect /feed.xml /index.xml
+
 <IfModule mod_deflate.c>
 AddOutputFilterByType DEFLATE application/atom+xml \
                                   application/javascript \
