--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,8 @@ cache: bundler
 rvm:
 - 2.4.1
 install: bundle install
-script: bundle exec rake site:travis
+script: bundle exec rake site:test
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-before_install:
-- echo -e "Host peacock.uberspace.de\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-- openssl aes-256-cbc -K $encrypted_7aef735ff37c_key -iv $encrypted_7aef735ff37c_iv -in deploy_key.enc -out deploy_key -d
-- chmod 600 deploy_key
-- mv deploy_key ~/.ssh/id_rsa
+
