:lock: Use https as default

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author:
 about_me: "System-Administrator with a penchant for FreeBSD"
 description: "Uberblock is a little blog, about programming, servers and unix. I will review some things, write some HowTos and make a caffeine injected rant or two."
 baseurl: ""
-url: "http://uberblock.de"
+url: "https://uberblock.de"
 twitter_username:  sangyye
 github_username:   sangyye
 tumblr_username:   sangyye
